# cmake-cpp-template

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ROADMAP.md  main.cpp
cmake/: CMakeLists.txt  mylibraryConfig.cmake.in
cmake/modules/: CopyDLLs.cmake  FetchGoogleTest.cmake  SetMSVCFlags.cmake
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  main.cpp  somthing.cpp
include/: CMakeLists.txt
include/mylibrary/: export.h  mylibrary.h
src/: CMakeLists.txt
src/mylibrary/: mylibrary.cpp
tests/: CMakeLists.txt  test_example.cpp
